<resources>
    <string name="app_name">Areas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="base">Base:</string>
    <string name="altura">Altura:</string>
    <string name="radio">Radio:</string>
    <string name="lado">Lado</string>
    <string name="digite">Digite Valor</string>
    <string name="button">Area</string>
    <string name="figura">Figura</string>
    <string name="area">Area</string>
    <string name="nohayfigura">Seleccione una Figura</string>
    <string name="campos_vacios">Campos vacios de la figura seleccionada</string>
</resources>
