<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/formas"
        android:layout_weight="4">
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="5">
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/rCuadro">
            </RadioButton>
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/rTriangulo">
            </RadioButton>
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/rRectangulo">
            </RadioButton>
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/rCirculo">
            </RadioButton>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lado"
                android:textSize="25dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/digite"
                android:inputType="numberDecimal"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/eLado"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/altura"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/digite"
                android:inputType="numberDecimal"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/eAltura"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/base"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/digite"
                android:inputType="numberDecimal"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/eBase"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/radio"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/digite"
                android:inputType="numberDecimal"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/eRadio"/>
        </LinearLayout>
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:id="@+id/boton"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/figura"
                android:textSize="30dp"
                android:layout_weight="1"
                android:id="@+id/tFigura"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="30dp"
                android:text="@string/area"
                android:layout_weight="2"
                android:id="@+id/tArea"/>
        </LinearLayout>

    </LinearLayout>









</LinearLayout>

